--- a/webinicial.html
+++ b/webinicial.html
@@ -23,7 +23,7 @@
 </head>
 <body>
     <div class="content">
-        <h1>Formulários</h1>
+        <h1>Formulários disponiveis</h1>
         <p>1. "formulário 1": Demonstração preenchimento web</p>
         <p>2. "formulário 2"</p>
         <p>...</p>
